{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 216,
  "lineage": "761ccecb-147c-269f-b9a5-1a8b72070114",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "infra_mind_ansible_ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a3261ce0ced79e3c",
            "domain": "vpc",
            "id": "eipalloc-0859e17c087e8bb54",
            "instance": "i-0f15d8998509c3bb6",
            "network_interface": "eni-0b5bf5d52c583aefb",
            "private_dns": "ip-172-17-1-51.ap-south-1.compute.internal",
            "private_ip": "172.17.1.51",
            "public_dns": "ec2-65-0-232-7.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.232.7",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.infra_mind_ansible_ec2",
            "aws_security_group.infra_mind_ansible_sg",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc",
            "data.template_file.install_ansible_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "infra_mind_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07a5c674db512efca",
            "public_dns": "ec2-65-1-14-195.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.14.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "infra_mind_wordpress_ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-025666d674499afe3",
            "domain": "vpc",
            "id": "eipalloc-004d3225abbc94442",
            "instance": "i-077c6b34c68eeb953",
            "network_interface": "eni-07d0c4841cf4d2c3a",
            "private_dns": "ip-172-17-1-215.ap-south-1.compute.internal",
            "private_ip": "172.17.1.215",
            "public_dns": "ec2-65-0-196-167.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.196.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.infra_mind_wordpress_ec2",
            "aws_security_group.infra_mind_ansible_sg",
            "aws_security_group.infra_mind_elb_sg",
            "aws_security_group.infra_mind_wordpress_sg",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "infra_mind_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:944269068014:loadbalancer/InfraMindELB",
            "availability_zones": [
              "ap-south-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "InfraMindELB-1838551312.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "InfraMindELB",
            "idle_timeout": 400,
            "instances": [
              "i-077c6b34c68eeb953"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "InfraMindELB",
            "security_groups": [
              "sg-0f238de1469286e71"
            ],
            "source_security_group": "944269068014/InfraMindELBSG",
            "source_security_group_id": "sg-0f238de1469286e71",
            "subnets": [
              "subnet-080ba6a64f2a399bc"
            ],
            "tags": {
              "Name": "InfraMindELB"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_instance.infra_mind_wordpress_ec2",
            "aws_security_group.infra_mind_ansible_sg",
            "aws_security_group.infra_mind_elb_sg",
            "aws_security_group.infra_mind_wordpress_sg",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "infra_mind_ansible_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db0b3ab7df22e366",
            "arn": "arn:aws:ec2:ap-south-1:944269068014:instance/i-0f15d8998509c3bb6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f15d8998509c3bb6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "InfraMind",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b5bf5d52c583aefb",
            "private_dns": "ip-172-17-1-51.ap-south-1.compute.internal",
            "private_ip": "172.17.1.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dce53ff47ffc391b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080ba6a64f2a399bc",
            "tags": {
              "Name": "Ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fef9539f5895f712"
            ]
          },
          "dependencies": [
            "aws_security_group.infra_mind_ansible_sg",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc",
            "data.template_file.install_ansible_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "infra_mind_mysql_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db0b3ab7df22e366",
            "arn": "arn:aws:ec2:ap-south-1:944269068014:instance/i-0c5f3859d921eb249",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5f3859d921eb249",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "InfraMind",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdfaf73b025586a3",
            "private_dns": "ip-172-17-2-155.ap-south-1.compute.internal",
            "private_ip": "172.17.2.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0aee7a670405c8343",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7d5a219699fbcb3",
            "tags": {
              "Name": "MySQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-024ca58c2bb9df055"
            ]
          },
          "dependencies": [
            "aws_security_group.infra_mind_ansible_sg",
            "aws_security_group.infra_mind_elb_sg",
            "aws_security_group.infra_mind_mysql_sg",
            "aws_security_group.infra_mind_wordpress_sg",
            "aws_subnet.infra_mind_private_subnet",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "infra_mind_wordpress_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db0b3ab7df22e366",
            "arn": "arn:aws:ec2:ap-south-1:944269068014:instance/i-077c6b34c68eeb953",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077c6b34c68eeb953",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "InfraMind",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d0c4841cf4d2c3a",
            "private_dns": "ip-172-17-1-215.ap-south-1.compute.internal",
            "private_ip": "172.17.1.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a36aa19f80c6a73f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080ba6a64f2a399bc",
            "tags": {
              "Name": "Wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a902aa41204330fb"
            ]
          },
          "dependencies": [
            "aws_security_group.infra_mind_ansible_sg",
            "aws_security_group.infra_mind_elb_sg",
            "aws_security_group.infra_mind_wordpress_sg",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "infra_mind_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944269068014:internet-gateway/igw-0926a529624c25f76",
            "id": "igw-0926a529624c25f76",
            "owner_id": "944269068014",
            "tags": {
              "Name": "InfraMindIGW"
            },
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "dependencies": [
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "infra_mind_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a5c674db512efca",
            "id": "nat-082c545c7d1dda5f9",
            "network_interface_id": "eni-00fc65c3298f66f1a",
            "private_ip": "172.17.1.62",
            "public_ip": "65.1.14.195",
            "subnet_id": "subnet-080ba6a64f2a399bc",
            "tags": {
              "Name": "InfraMindNatGW"
            }
          },
          "dependencies": [
            "aws_eip.infra_mind_nat_eip",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06df3d01b0f2ba0e4",
            "owner_id": "944269068014",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-082c545c7d1dda5f9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "InfraMindPrivateRouteTable"
            },
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.infra_mind_nat_eip",
            "aws_nat_gateway.infra_mind_nat_gw",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0408fa0b576a86195",
            "owner_id": "944269068014",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0926a529624c25f76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "InfraMindPublicRouteTable"
            },
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.infra_mind_igw",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2e143f82abb7e49",
            "route_table_id": "rtb-06df3d01b0f2ba0e4",
            "subnet_id": "subnet-0e7d5a219699fbcb3"
          },
          "dependencies": [
            "aws_eip.infra_mind_nat_eip",
            "aws_nat_gateway.infra_mind_nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.infra_mind_private_subnet",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe9b8a2b6017b6e0",
            "route_table_id": "rtb-0408fa0b576a86195",
            "subnet_id": "subnet-080ba6a64f2a399bc"
          },
          "dependencies": [
            "aws_internet_gateway.infra_mind_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.infra_mind_public_subnet",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "infra_mind_ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944269068014:security-group/sg-0fef9539f5895f712",
            "description": "Allow SSH Traffic from the Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fef9539f5895f712",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 Port from the Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "InfraMindAnsibleSG",
            "name_prefix": null,
            "owner_id": "944269068014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "InfraMindAnsibleSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "infra_mind_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944269068014:security-group/sg-0f238de1469286e71",
            "description": "Allow HTTP Traffic from the Internet (Anywhere)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f238de1469286e71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from the Internet for ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "InfraMindELBSG",
            "name_prefix": null,
            "owner_id": "944269068014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "InfraMindELBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "infra_mind_mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944269068014:security-group/sg-024ca58c2bb9df055",
            "description": "Allow MYSQL Traffic from Wordpress EC2 Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024ca58c2bb9df055",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow 3306 Port from Wordpress SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a902aa41204330fb"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow All Traffic from Ansible SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0fef9539f5895f712"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "InfraMindMySQLSG",
            "name_prefix": null,
            "owner_id": "944269068014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "InfraMindMySQLSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.infra_mind_ansible_sg",
            "aws_security_group.infra_mind_elb_sg",
            "aws_security_group.infra_mind_wordpress_sg",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "infra_mind_wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944269068014:security-group/sg-0a902aa41204330fb",
            "description": "Allow HTTP Traffic from ELB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a902aa41204330fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow 80 Port from ELB SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f238de1469286e71"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow All Traffic from Ansible SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0fef9539f5895f712"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "InfraMindWordpressSG",
            "name_prefix": null,
            "owner_id": "944269068014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "InfraMindWordpressSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.infra_mind_ansible_sg",
            "aws_security_group.infra_mind_elb_sg",
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "infra_mind_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944269068014:subnet/subnet-0e7d5a219699fbcb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-0e7d5a219699fbcb3",
            "map_public_ip_on_launch": false,
            "owner_id": "944269068014",
            "tags": {
              "Name": "InfraMindPrivateSubnet"
            },
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "dependencies": [
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "infra_mind_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944269068014:subnet/subnet-080ba6a64f2a399bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-080ba6a64f2a399bc",
            "map_public_ip_on_launch": false,
            "owner_id": "944269068014",
            "tags": {
              "Name": "InfraMindPublicSubnet"
            },
            "vpc_id": "vpc-0300a3eba9b967db4"
          },
          "dependencies": [
            "aws_vpc.infra_mind_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra_mind_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944269068014:vpc/vpc-0300a3eba9b967db4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-07a738aa9d830cca9",
            "default_route_table_id": "rtb-0876cff57591207ca",
            "default_security_group_id": "sg-0ae80daeb6e6afebd",
            "dhcp_options_id": "dopt-bb624ed3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0300a3eba9b967db4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0876cff57591207ca",
            "owner_id": "944269068014",
            "tags": {
              "Name": "InfraMindVPC"
            }
          }
        }
      ]
    }
  ]
}